(add new changes on top of this file)

Änderungen
----------

v0.11.9 (??.01.2012)
 * tx_rnbase_mod_Util: New methods for sprites.

v0.11.8 (07.01.2012)
 * tx_rnbase_util_Date: TCA methods fixed for value 0
 * tx_rnbase_util_Misc: translateLLL works in BE and FE

v0.11.7 (03.01.2012) (not released)
 * CharBrowser: parameter name for link can be changed.

v0.11.6 (29.12.2011) (not released)
 * tx_rnbase_mod_Table: links for sorting in BE tables changed.

v0.11.5 (29.12.2011) (not released)
 * tx_rnbase_util_Date: new methods to convert dates in TCA

v0.11.4 (17.12.2011)
 * tx_rnbase::load() requireOnce from t3lib_div used for file loading. Thanks to Michael Wagner!
 * tx_rnbase_util_Exception: return readable values as default. Thanks to Michael Wagner!
 * tx_rnbase_util_Templates: It is possible to disable caching in substituteMarkerArrayCached.
 * util_TSDAM: getMediaTCA supports options array to override config.
 * It is possible to disable caching in substituteMarkerCached by Typoscript. This saves a lot of memory for large listviews.

v0.11.3 (24.11.2011) (not released)
 * util_Link::makeUrlParam(): Sonderfall weiteres Array im Parameter
 * util_BaseMarker::checkLinkExistence(): default values for last parameters

v0.11.2 (14.11.2011) (not released)
 * tx_rnbase_configurations::getPluginUid() will always return a unique id even if plugin is defined by Typoscript.
 * CacheHandlerDefault is ready to use

v0.11.1 (11.11.2011) (not released)
 * tx_rnbase_util_DB can be used to access external databases.
 * First caching stategy implemented
 * tx_rnbase_util_FormTool: createTxtInput with $options array.

v0.11.0 (05.11.2011) (not released)
 * CacheManager changed for TYPO3 4.6. It is still possible to use unconfigured caches.
 * tx_rnbase_configurations::getLL fixed for T3 4.6. Thanks to Christian Riesche!

v0.10.9 (27.10.2011) (not released)
 * tx_rnbase_util_FormTool: Hide and Delete Link fixed. FormValidationToken added. Thanks to Hannes Bochmann!
